Lesson 13: fixed overflow-inline

--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -639,7 +639,7 @@ body {
 .slider-promo__wrapper {
   display: flex;
   gap: 30px;
-  overflow-inline: auto;
+  overflow-x: auto;
   scroll-snap-type: inline proximity;
 }
 
